dodata logika za login (pre autologina)

--- a/src/app/components/exams/exams.component.html
+++ b/src/app/components/exams/exams.component.html
@@ -1,5 +1,5 @@
 <div class="exam-container">
-  <h2 class="container-title">Upcoming Exams</h2>
+  <h2 class="container-title">Predstojeci Ispiti</h2>
   <div class="exam-list">
     <div *ngFor="let exam of exams; let i = index" >
       <app-exam-card [exam]="exam"></app-exam-card>
