--- a/src/app/components/exams/exam-card/exam-card.component.html
+++ b/src/app/components/exams/exam-card/exam-card.component.html
@@ -1,7 +1,7 @@
 <div class="exam-card" [routerLink]="['/exams', exam.id]">
   <div class="card-body">
     <h5 class="card-title">{{ exam.name }}</h5>
-    <p class="card-text">Date: {{ exam.date }}</p>
-    <p class="card-text">Time: {{ exam.time }}</p>
+    <p class="card-text">Datum: {{ exam.date }}</p>
+    <p class="card-text">Vreme: {{ exam.time }}</p>
   </div>
 </div>
