--- a/src/app/components/exams/exam-details/exam-details.component.html
+++ b/src/app/components/exams/exam-details/exam-details.component.html
@@ -1,12 +1,11 @@
-<!-- exam-details.component.html -->
 <div class="exam-details">
   <h1 class="exam-title">{{ exam.name }}</h1>
   <div class="exam-info">
-    <p><strong>Date:</strong> {{ exam.date }}</p>
-    <p><strong>Time:</strong> {{ exam.time }}</p>
-    <p><strong>Registration start date:</strong> {{ exam.registrationStart }}</p>
-    <p><strong>Registration end date:</strong> {{ exam.registrationEnd }}</p>
-    <p><strong>Price:</strong> {{ exam.price | currency:'RSD' }}</p>
+    <p><strong>Datum:</strong> {{ exam.date }}</p>
+    <p><strong>Vreme:</strong> {{ exam.time }}</p>
+    <p><strong>Registracija krece:</strong> {{ exam.registrationStart }}</p>
+    <p><strong>Registracija se zavrsava:</strong> {{ exam.registrationEnd }}</p>
+    <p><strong>Cena:</strong> {{ exam.price | currency:'RSD' }}</p>
   </div>
-  <button class="mockfon-button" (click)="proceedToPayment()">Proceed to payment</button>
+  <button class="mockfon-button" (click)="proceedToPayment()">Predji na placanje</button>
 </div>
