--- a/src/app/components/login/auth.component.css
+++ b/src/app/components/login/auth.component.css
@@ -5,7 +5,6 @@
 body {
   height: 100vh;
   background: #ffffff;
-  overflow-y: hidden!important;
   font-family: 'Poppins', sans-serif;
 }
 a {
@@ -20,7 +19,7 @@ a:hover {
   background: #f7f8fa; /* Svetlo siva */
   padding: 40px;
   max-width: 600px;
-  margin: 120px auto;
+  margin: 10px auto;
   border-radius: 15px;
   box-shadow: 0 4px 10px 4px rgba(0, 0, 0, .1);
 }
@@ -115,7 +114,7 @@ textarea {
   transition: all 0.5s ease;
   -webkit-appearance: none;
 }
-.button:hover, .button:focus {
+.button:hover {
   background: #fb8c00; /* Tamnija narandžasta */
 }
 .button-block {
