--- a/src/app/components/login/login-form/login-form.component.css
+++ b/src/app/components/login/login-form/login-form.component.css
@@ -52,7 +52,7 @@ textarea {
   transition: all 0.5s ease;
   -webkit-appearance: none;
 }
-.button:hover, .button:focus {
+.button:hover {
   background: #025c61;
 }
 .button-block {
