--- a/src/app/components/login/login-form/login-form.component.html
+++ b/src/app/components/login/login-form/login-form.component.html
@@ -1,10 +1,10 @@
-<h1>Welcome Back!</h1>
+<h1>Dobrodosli!</h1>
 <form (submit)="onSubmit()">
   <div class="field-wrap">
     <input type="email" required placeholder="Email" [(ngModel)]="email" name="email" />
   </div>
   <div class="field-wrap">
-    <input type="password" required placeholder="Password" [(ngModel)]="password" name="password" />
+    <input type="password" required placeholder="Lozinka" [(ngModel)]="password" name="password" />
   </div>
-  <button type="submit" class="button button-block">Login</button>
+  <button type="submit" class="button button-block">Prijavi Se</button>
 </form>
