--- a/src/app/components/login/login-form/login-form.component.html
+++ b/src/app/components/login/login-form/login-form.component.html
@@ -1,4 +1,4 @@
-<h1>Dobrodosli!</h1>
+<h1>Dobrodošli!</h1>
 <form (submit)="onSubmit()">
   <div class="field-wrap">
     <input type="email" required placeholder="Email" [(ngModel)]="email" name="email" />
@@ -6,5 +6,5 @@
   <div class="field-wrap">
     <input type="password" required placeholder="Lozinka" [(ngModel)]="password" name="password" />
   </div>
-  <button type="submit" class="button button-block">Prijavi Se</button>
+  <button type="submit" class="button button-block">Prijavi se</button>
 </form>
