--- a/src/app/components/exams/exam-card/exam-card.component.css
+++ b/src/app/components/exams/exam-card/exam-card.component.css
@@ -6,9 +6,13 @@
   background-color: #fff;
   margin: 15px;
   min-width: 250px;
-  max-width: 500px;
+  max-width: 440px;
   overflow: hidden;
   transition: transform 0.3s ease;
+}
+
+.exam-card p {
+  margin-bottom: 0.5rem;
 }
 
 .exam-card:hover {
@@ -26,8 +30,8 @@
 }
 
 .card-title {
-  font-size: 1.25rem;
-  margin-bottom: 10px;
+  font-size: 1.5rem;
+  margin-bottom: 25px;
   color: #333;
 }
 
