--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0px 30px;
+  padding: 0px 30px 0px 0px;
   background-color: white;
   color: #fff;
 }
@@ -26,4 +26,23 @@
   font-size: 1rem;
   color: black;
 }
+
+.header .logo .mockfon-menu-link {
+  padding: 8px 15px; /* Punjenje za formu dugmeta */
+  color: #000; /* Crna boja teksta */
+  text-decoration: none; /* Uklanja podcrtavanje */
+  font-size: 18px; /* Veličina teksta */
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; /* Odabir fonta */
+  border-radius: 0; /* Bez zaobljenja kada nije hover */
+  transition: all 0.3s ease; /* Animacija za boju, pozadinu i zaobljenje */
+  background-color: transparent; /* Prozirna pozadina kada nije hover */
+  margin-left: 20px;
+}
+
+.header .logo .mockfon-menu-link:hover {
+  color: #000; /* Zadržava crnu boju teksta */
+  background-color: #e0e0e0; /* Blago siva pozadina na hover */
+  border-radius: 20px; /* Zaobljene ivice na hover */
+}
+
 
