--- a/src/app/components/login/auth.component.html
+++ b/src/app/components/login/auth.component.html
@@ -1,10 +1,10 @@
 <div class="form">
   <ul class="tab-group">
     <li class="tab" [class.active]="activeTab === 'signup'" (click)="setActiveTab('signup')">
-      <a style="cursor: pointer;">Registruj Se</a>
+      <a style="cursor: pointer;">Registruj se</a>
     </li>
     <li class="tab" [class.active]="activeTab === 'login'" (click)="setActiveTab('login')">
-      <a style="cursor: pointer;">Prijavi Se</a>
+      <a style="cursor: pointer;">Prijavi se</a>
     </li>
   </ul>
   <div class="form-content">
