--- a/src/app/components/login/signup-form/signup-form.component.html
+++ b/src/app/components/login/signup-form/signup-form.component.html
@@ -11,14 +11,5 @@
   <div class="field-wrap">
     <input type="email" required placeholder="Email" [(ngModel)]="email" name="email" ngModel>
   </div>
-  <div class="field-wrap">
-    <input type="password" required placeholder="Lozinka" [(ngModel)]="password" name="password" ngModel>
-  </div>
-  <div class="field-wrap">
-    <input type="text" required placeholder="Adresa" [(ngModel)]="address" name="address" ngModel>
-  </div>
-  <div class="field-wrap">
-    <input type="text" required placeholder="JMBG" [(ngModel)]="umcn" name="umcn" ngModel>
-  </div>
-  <button type="submit" class="button button-block" >Registruj Se</button>
+  <button type="submit" class="button button-block" >Registruj se</button>
 </form>
